HelloUltraviolet/Fixtures/RejectedSource/Procedures/PreconditionsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the PreconditionsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2801", "diag.15.Preconditions")
